Added Comments , <p> , <hr> , <br> , <a>  Tags

--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
     <title>New Site</title>
 </head>
 <body>
+    <!-- Heading Tags and horizontal rule --> 
+
     <h1>h1 Tag</h1>
     <h2>h2 Tag</h2>
     <h3>h3 Tag</h3>
     <h4>h4 Tag</h4>
     <h5>h5 Tag</h5>
     <h6>h6 Tag</h6>
+
+    <hr>
+
+    <!-- Paragaraph Tag -->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut velit in, quas adipisci dolorum consectetur distinctio voluptas a explicabo esse necessitatibus eos quaerat commodi, repellat veritatis optio. Labore, ipsa repellat.</p>
+
+    <hr>
+
+    <!-- Button -->
+
+    <button>Subscribe</button>
+
+    <hr>
+
+    <!-- Hyperlinks -->
+
+    <a href="www.google.com">Google</a>
+    
 </body>
 </html>
