--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- Hyperlinks -->
 
-    <a href="www.google.com">Google</a>
-    
+    <a href="http://www.google.com" target="_blank" title="Hover a cursor on hyperlink">Google</a>
+
 </body>
 </html>
