Added image feature into this HTML file.

--- a/index.html
+++ b/index.html
@@ -34,5 +34,14 @@
 
     <a href="http://www.google.com" target="_blank" title="Hover a cursor on hyperlink">Google</a>
 
+    <hr>
+
+    <!-- Images -->
+
+    <img src="./Images/pexels-fabiano-rodrigues-1662298.jpg" height="400px" width="700px" alt="Image" title="Just a image">
+
+    <hr>
+
+    <!-- Audio -->
 </body>
 </html>
