Added Audio and Video syntax

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
     <hr>
 
-    <!-- Audio -->
+    <!-- Audio & Video Syntax -->
+  
+    <audio controls autoplay muted loop src=" "></audio>
+
+    <video controls autoplay muted loop src=""></video>
+
+    <hr>
+
 </body>
 </html>
