Modified the paragraph text Bold Tag.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
   
     <audio controls autoplay muted loop src=" "></audio>
 
+    <br> <br> <br>
+
     <video controls autoplay muted loop src=""></video>
 
+    <br><br><br>
+
     <hr>
+
+    <!-- Text Bold -->
+
+    <p>Lorem ipsum dolor sit amet <b> consectetur adipisicing elit. </b>Saepe quis cum repellat ipsum provident debitis similique dicta inventore obcaecati tempore dolores, non officia iusto doloremque, commodi nobis fugit, voluptate recusandae!</p>
 
 </body>
 </html>
