Added Italic , Small , Big , Sub , sup Tags.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- Text Bold -->
 
-    <p>Lorem ipsum dolor sit amet <b> consectetur adipisicing elit. </b>Saepe quis cum repellat ipsum provident debitis similique dicta inventore obcaecati tempore dolores, non officia iusto doloremque, commodi nobis fugit, voluptate recusandae!</p>
+    <p>Lorem ipsum <i>itallic style</i> sit amet <b> Bold </b>Saepe quis cum <small> Small word </small>  ipsum <big>Big word</big> debitis <sub>Sub-script</sub>Super-script<sup>obcaecati</sup> tempore dolores, non officia iusto doloremque, commodi nobis fugit, voluptate recusandae!</p>
 
 </body>
 </html>
