Added the Text ins , del , marked Tags

--- a/index.html
+++ b/index.html
@@ -54,9 +54,23 @@
 
     <hr>
 
-    <!-- Text Bold -->
+    <!-- Text Bold , itallic , Big , Small , Sub-script , Super-script -->
 
     <p>Lorem ipsum <i>itallic style</i> sit amet <b> Bold </b>Saepe quis cum <small> Small word </small>  ipsum <big>Big word</big> debitis <sub>Sub-script</sub>Super-script<sup>obcaecati</sup> tempore dolores, non officia iusto doloremque, commodi nobis fugit, voluptate recusandae!</p>
+
+    <hr>
+
+    <!-- Inserted (underline) , deleted (crossover) , marked (Highlighted the words)-->
+
+    <p><ins>Text inserted</ins></p>
+
+    <p><del>Text deleted</del></p>
+
+    <p> The text has been <mark>Highlighted</mark> </p>
+
+    <hr>
+
+
 
 </body>
 </html>
