Added Unorder and Ordered List Tag.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
 
     <hr>
 
+    <!-- Unordered List -->
+
+    <ul>
+      <li>Pizza</li>
+      <li>Burger</li>
+      <li>Sandwich</li>
+    </ul>
+
+    <!-- Ordered List -->
+
+    <ol type="A">
+      <li>Hero</li>
+      <li>Heroine</li>
+    </ol>
 
 
 </body>
