Added Description List Tag

--- a/index.html
+++ b/index.html
@@ -71,20 +71,34 @@
     <hr>
 
     <!-- Unordered List -->
-
+    <b>Unordered List</b>
     <ul>
       <li>Pizza</li>
       <li>Burger</li>
+      <ul>
+        <li>Chicken</li>
+        <li>Veg</li>
+      </ul>
       <li>Sandwich</li>
     </ul>
 
     <!-- Ordered List -->
-
+    <b>Ordered List</b>
     <ol type="A">
       <li>Hero</li>
       <li>Heroine</li>
     </ol>
 
+    <!-- Description List -->
+
+    <b>Description List</b>
+
+    <dl>
+      <dt>HTML</dt>
+      <dd>  HTML Description</dd> <br>
+      <dt>CSS</dt>
+      <dd>CSS Description</dd>
+    </dl>
 
 </body>
 </html>
